--- a/src/components/Expenses/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate.css
@@ -4,23 +4,23 @@
   width: 5.5rem;
   height: 5.5rem;
   border: 1px solid #ececec;
-  background-color: #2a2a2a;
-  color: white;
+  background-color: #fdf0d5;
+  color: #333333;
   border-radius: 12px;
   align-items: center;
   justify-content: center;
 }
 
 .expense-date__month {
-  font-size: 0.75rem;
+  font-size: 1rem;
   font-weight: bold;
 }
 
 .expense-date__year {
-  font-size: 0.75rem;
+  font-size: 0.8rem;
 }
 
 .expense-date__day {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   font-weight: bold;
 }
