--- a/src/components/Chart/ChartBar.css
+++ b/src/components/Chart/ChartBar.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 0.8rem;
 }
 
 .chart-bar__inner {
@@ -10,7 +11,7 @@
   width: 100%;
   border: 1px solid #313131;
   border-radius: 12px;
-  background-color: #c3b4f3;
+  background-color: #fdf0d5;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -18,12 +19,14 @@
 }
 
 .chart-bar__fill {
-  background-color: #4826b9;
+  background-color: #f48c06;
   width: 100%;
   transition: all 0.3s ease-out;
 }
 
 .chart-bar__label {
+  color: #ffffff;
+  padding-top: 0.5rem;
   font-weight: bold;
   font-size: 0.5rem;
   text-align: center;
